# bubblekeys

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tray.html  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-26-bubblekeys.md  2026-04-27-bubblekeys-v0.2.0.md  2026-04-28-bubblekeys-v0.2.2.md
docs/superpowers/specs/: 2026-04-26-bubblekeys-design.md
scripts/: make-icons.sh  render-icons.ts  smoke-test.md  synth-packs.py  verify-i18n-keys.ts
scripts/icon-mockup/: icon-master-simplified.html  icon-master.html
src/: main.ts  tray.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/packs/bubbles/: config.json
src-tauri/packs/cherry-black/: config.json
src-tauri/packs/cherry-blue/: config.json
src-tauri/packs/cherry-brown/: config.json
src-tauri/packs/cherry-purple/: config.json
src-tauri/packs/cherry-red/: config.json
src-tauri/packs/cherry-red-silent/: config.json
src-tauri/packs/cherry-silver/: config.json
src-tauri/packs/cherry-white/: config.json
src-tauri/src/: audio_engine.rs  dispatcher.rs  ipc.rs  key_listener.rs  lib.rs  main.rs  mute_controller.rs  night_silent.rs  pack_format.rs  pack_store.rs  settings_store.rs  tray.rs
src-tauri/tests/fixtures/pack_multi/: config.json
src-tauri/tests/fixtures/pack_single/: config.json
src/i18n/: index.ts
src/lib/: ipc.ts  modal.ts  router.ts
src/styles/: fonts.css  pixel.css  tokens.css
src/views/: about.ts  first-run.ts  home.ts  packs.ts  settings.ts
(+14 files in other folders)
