[package]
name = "bubblekeys"
version = "0.1.0"
description = "Open-source typing sound effects for macOS"
authors = ["BubbleKeys contributors"]
edition = "2021"
rust-version = "1.79"

[lib]
name = "bubblekeys_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0"
zip = "2.1"
cpal = "0.15"
rodio = { version = "0.19", default-features = false, features = ["vorbis"] }
core-graphics = "0.24"
core-foundation = "0.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
